# chatbot

./: .env  .gitignore  app.py  dump.rdb  main.py  pyproject.toml  table.py
agent/: build_vectorstore.py  graph.py  node.py  state.py  tools.py  vectorstore.py
agent/config/: prompts.py  propmt.py
agent/node/: check_optimization.py  evalute.py  extract_skills.py  gap_analyzer.py  optimize_skill.py  placement.py  suggestion.py
agent/schema/: llm.py  schema.py
agent/states/: states.py
data/: salon_knowledge.txt
database/: chat_history.py  chat_repository.py  database.py
dependencies/: llm.py
prompt/: prompt.py
rag/: build_vectorstore.py  vectorstore.py
rag/vector_db/: index.faiss  index.pkl
