[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "ipython>=9.14.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-redis>=0.4.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.1",
    "sqlalchemy>=2.0.51",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.49.0",
]
