[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "config>=0.5.1",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.138.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-redis>=0.5.0",
    "pydantic>=2.13.4",
    "python-decouple>=3.8",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
